--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="UnAEgFbHr_ovjVZLO9iCKdC4lq5E1ihZ3F7cqv6KFoM" />
     <title>Umpire's Call</title>
   </head>
   <body>
